--- a/web/app/cenozo/add-input.tpl.html
+++ b/web/app/cenozo/add-input.tpl.html
@@ -21,6 +21,7 @@
           type="text"
           autocomplete="off"
           maxlength="{{ input.maxLength }}"
+          ng-disabled="disabled"
           ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <div ng-switch-when="size">
@@ -32,6 +33,7 @@
               class="form-control"
               type="text"
               autocomplete="off"
+              ng-disabled="disabled"
               ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
               ng-required="model.metadata.columnList[input.key].required"></input>
           </div>
@@ -41,7 +43,9 @@
                     ng-model="formattedRecord[input.key][1]"
                     ng-change="check()"
                     class="form-control"
-                    ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )a"
+                    ng-disabled="disabled ||
+                                 true === input.isConstant( state, model ) ||
+                                 'add' == input.isConstant( state, model )"
                     ng-required="model.metadata.columnList[input.key].required">
               <option ng-disabled="null === record[input.key]" value="Bytes">Bytes</option>
               <option ng-disabled="null === record[input.key]" value="KB">KB</option>
@@ -67,6 +71,7 @@
           type="text"
           placeholder="(Type the first few letters to search possible values)"
           autocomplete="off"
+          ng-disabled="disabled"
           ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <input ng-switch-when="lookup-typeahead"
@@ -83,6 +88,7 @@
           type="text"
           placeholder="(Type the first few letters to search possible values)"
           autocomplete="off"
+          ng-disabled="disabled"
           ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></input>
         <input ng-switch-when="datetime"
@@ -97,6 +103,7 @@
           class="form-control"
           type="text"
           ng-click="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model ) ? null : selectDatetime()"
+          ng-disabled="disabled"
           ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           onkeydown="return false"></input>
         <input ng-switch-when="color"
@@ -110,6 +117,7 @@
           colorpicker-size="200"
           colorpicker-close-on-select
           autocomplete="off"
+          ng-disabled="disabled"
           ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"
           onkeydown="return false"></input>
@@ -121,7 +129,9 @@
           ng-model="record[input.key]"
           ng-change="check()"
           class="form-control"
-          ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model ) ||
+          ng-disabled="disabled ||
+                       true === input.isConstant( state, model ) ||
+                       'add' == input.isConstant( state, model ) ||
                        !input.enumList || 1 >= input.enumList.length"
           ng-required="model.metadata.columnList[input.key].required"></select>
         <select ng-switch-when="select"
@@ -134,7 +144,9 @@
           ng-change="check()"
           class="form-control"
           style="height:17em;"
-          ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model ) ||
+          ng-disabled="disabled ||
+                       true === input.isConstant( state, model ) ||
+                       'add' == input.isConstant( state, model ) ||
                        !input.enumList || 1 >= input.enumList.length"
           ng-required="model.metadata.columnList[input.key].required"></select>
         <textarea ng-switch-when="text"
@@ -145,6 +157,7 @@
           cn-change="check()"
           class="form-control"
           maxlength="{{ input.maxLength }}"
+          ng-disabled="disabled"
           ng-readonly="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
           ng-required="model.metadata.columnList[input.key].required"></textarea>
         <div ng-switch-when="file" ng-init="file=model.addModel.fileList.findByProperty( 'key', input.key )">
@@ -164,7 +177,9 @@
                 id="sunday"
                 name="name"
                 ng-model="record.sunday"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> Sunday
             </label>
           </div>
@@ -174,7 +189,9 @@
                 id="monday"
                 name="name"
                 ng-model="record.monday"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> Monday
             </label>
           </div>
@@ -184,7 +201,9 @@
                 id="tuesday"
                 name="name"
                 ng-model="record.tuesday"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> Tuesday
             </label>
           </div>
@@ -194,7 +213,9 @@
                 id="wednesday"
                 name="name"
                 ng-model="record.wednesday"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> Wednesday
             </label>
           </div>
@@ -204,7 +225,9 @@
                 id="thursday"
                 name="name"
                 ng-model="record.thursday"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> Thursday
             </label>
           </div>
@@ -214,7 +237,9 @@
                 id="friday"
                 name="name"
                 ng-model="record.friday"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> Friday
             </label>
           </div>
@@ -224,7 +249,9 @@
                 id="saturday"
                 name="name"
                 ng-model="record.saturday"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> Saturday
             </label>
           </div>
@@ -236,7 +263,9 @@
                 id="january"
                 name="name"
                 ng-model="record.january"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> January
             </label>
           </div>
@@ -246,7 +275,9 @@
                 id="february"
                 name="name"
                 ng-model="record.february"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> February
             </label>
           </div>
@@ -256,7 +287,9 @@
                 id="march"
                 name="name"
                 ng-model="record.march"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> March
             </label>
           </div>
@@ -266,7 +299,9 @@
                 id="april"
                 name="name"
                 ng-model="record.april"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> April
             </label>
           </div>
@@ -276,7 +311,9 @@
                 id="may"
                 name="name"
                 ng-model="record.may"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> May
             </label>
           </div>
@@ -286,7 +323,9 @@
                 id="june"
                 name="name"
                 ng-model="record.june"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> June
             </label>
           </div>
@@ -298,7 +337,9 @@
                 id="july"
                 name="name"
                 ng-model="record.july"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> July
             </label>
           </div>
@@ -308,7 +349,9 @@
                 id="august"
                 name="name"
                 ng-model="record.august"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> August
             </label>
           </div>
@@ -318,7 +361,9 @@
                 id="september"
                 name="name"
                 ng-model="record.september"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> September
             </label>
           </div>
@@ -328,7 +373,9 @@
                 id="october"
                 name="name"
                 ng-model="record.october"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> October
             </label>
           </div>
@@ -338,7 +385,9 @@
                 id="november"
                 name="name"
                 ng-model="record.november"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> November
             </label>
           </div>
@@ -348,7 +397,9 @@
                 id="december"
                 name="name"
                 ng-model="record.december"
-                ng-disabled="true === input.isConstant( state, model ) || 'add' == input.isConstant( state, model )"
+                ng-disabled="disabled ||
+                             true === input.isConstant( state, model ) ||
+                             'add' == input.isConstant( state, model )"
                 type="checkbox"> December
             </label>
           </div>
