Feature: improving equipment CSV file upload utility

--- a/web/app/equipment_type/upload.tpl.html
+++ b/web/app/equipment_type/upload.tpl.html
@@ -15,27 +15,30 @@
   <div class="spacer">
     <p style="margin-top: 1em">
       This utility allows you to upload equipment data from a CSV file.
-      The file must conform to one of the following options:
+    </p>
+    <p style="margin-top: 1em">
+      The file must have a single header row containing the column names listed in quotes below,
+      and it must conform to one of the following options:
     </p>
     <div class="container-fluid">
       <h4>Option #1: three rows (used to upload new equipment)</h4>
       <ul>
-        <li>Serial Number (must not belong to any other equipment type)</li>
-        <li>Site Name (may be blank)</li>
-        <li>Equipment Note (may be blank)</li>
+        <li>Serial Number "serial_number" (must not belong to any other equipment type)</li>
+        <li>Site Name "site" (may be blank)</li>
+        <li>Equipment Note "note" (may be blank)</li>
       </ul>
     </div>
     <div class="container-fluid">
       <h4>Option #2: eight rows (used to upload equipment that has already been loaned)</h4>
       <ul>
-        <li>Serial Number (must not belong to any other equipment type)</li>
-        <li>Site Name (may be blank)</li>
-        <li>Equipment Note (may be blank)</li>
-        <li>UID (must be a pre-existing UID)</li>
-        <li>Lost (considered lost if value is 1, y, yes or true)</li>
-        <li>Start Date &amp; Time in UTC (YYYY-MM-DD hh:mm format)</li>
-        <li>End Date &amp; Time in UTC (YYYY-MM-DD hh:mm format, may be blank)</li>
-        <li>Loan Note (may be blank)</li>
+        <li>Serial Number "serial_number" (must not belong to any other equipment type)</li>
+        <li>Site Name "site" (may be blank)</li>
+        <li>Equipment Note "note" (may be blank)</li>
+        <li>UID "uid" (must be a pre-existing UID)</li>
+        <li>Lost "lost" (considered lost if value is 1, y, yes or true)</li>
+        <li>Start Date &amp; Time in UTC "start_datetime" (YYYY-MM-DD hh:mm format)</li>
+        <li>End Date &amp; Time in UTC "end_datetime" (YYYY-MM-DD hh:mm format, may be blank)</li>
+        <li>Loan Note "loan_note" (may be blank)</li>
       </ul>
     </div>
   </div>
