Bug: fixing record list highlight/caution bugs

--- a/web/app/cenozo/record-list.tpl.html
+++ b/web/app/cenozo/record-list.tpl.html
@@ -139,7 +139,7 @@
             ng-click="model.listModel.chooseMode ? chooseRecord( record ) : selectRecord( record )"
             ng-class="{
               success:model.listModel.chooseMode && record.chosen,
-              highlight:!record.caution && record.$highlight,
+              highlight:!record.$caution && record.$highlight,
               caution:record.$caution && !record.$highlight,
               'highlight-and-caution':record.$caution && record.$highlight
             }">
